--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "koa-body大文件上传",
   "main": "index.js",
   "scripts": {
+    "dev": "supervisor server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,9 +12,10 @@
     "url": "git+https://github.com/GuanyuChen/koa-bigfile-upload.git"
   },
   "dependencies": {
-    "koa":"2.13.1",
-    "koa-body":"4.2.0",
-    "koa-router":"10.0.0"
+    "koa": "2.13.1",
+    "koa-body": "4.2.0",
+    "koa-router": "10.0.0",
+    "koa-static": "5.0.0"
   },
   "keywords": [],
   "author": "",
